Reworked some API endpoints for the sake of consistency
