# controller/dbOperator.go
@@ -1,17 +1,19 @@
 package controller
 
 import (
+	"database/sql"
 	"pp-api/data"
 )
 
+// getRanking return the current leaderboard.
 func getRanking() ([]data.Rank, error) {
 	db := GetConnection()
 
 	rTx := db.MustBegin()
 
-	query := "SELECT users.name, COUNT(sessions.user) " +
-		"FROM sessions,users WHERE sessions.user = users.idusers " +
-		"GROUP BY users.name ORDER BY COUNT(sessions.user) DESC"
+	query := "SELECT users.name, COUNT(sessions.athlete) " +
+		"FROM sessions,users WHERE sessions.athlete = users.users_id " +
+		"GROUP BY users.name ORDER BY COUNT(sessions.athlete) DESC"
 
 	ranking := []data.Rank{}
 
@@ -25,12 +27,13 @@ func getRanking() ([]data.Rank, error) {
 	return ranking, nil
 }
 
+// getSessions returns all sessions for the given user.
 func getSessions(user int) ([]data.Session, error) {
 	db := GetConnection()
 
 	sTx := db.MustBegin()
 
-	query := "SELECT idsessions, start, length, quality FROM sessions WHERE user = ?"
+	query := "SELECT sessions_id, start, length, quality FROM sessions WHERE athlete = ?"
 
 	sessions := []data.Session{}
 
@@ -44,6 +47,7 @@ func getSessions(user int) ([]data.Session, error) {
 	return sessions, nil
 }
 
+// addSession adds a session for given user with attributes start, length and quality.
 func addSession(userID int, start string, length int, quality int) error {
 	db := GetConnection()
 
@@ -61,6 +65,7 @@ func addSession(userID int, start string, length int, quality int) error {
 	return nil
 }
 
+// deleteSessions deletes a distinct session.
 func deleteSession(sessionID int) error {
 	db := GetConnection()
 
@@ -78,33 +83,45 @@ func deleteSession(sessionID int) error {
 	return nil
 }
 
-func isUserValid(username string, password string) (bool, error) {
+// doesUserExist checks if the given user is present in the database
+func doesUserExist(username string) (bool, error) {
 	db := GetConnection()
 
 	rTx := db.MustBegin()
 
-	query := "SELECT idusers,name FROM users WHERE name = ? AND password = ?"
+	query := "SELECT name FROM users WHERE name = ?"
 
-	user := data.User{}
+	var user struct {
+		Username string `db:"name"`
+	}
 
-	userError := db.Get(&user, query, username, password)
+	userError := db.Get(&user, query, username)
 	if userError != nil {
-		// TODO: check on sql error empty result set
-		return false, userError
+		var userExists bool
+
+		// user does not exist
+		if userError == sql.ErrNoRows {
+			userExists = false
+			return userExists, nil
+		}
+
+		// database or other error
+		return userExists, userError
 	}
 
 	rTx.Commit()
 
-	// if user or password is not correct function will terminate above
+	// user does exist
 	return true, nil
 }
 
+// getUser queries the database with the given username.
 func getUser(username string) (data.User, error) {
 	db := GetConnection()
 
 	rTx := db.MustBegin()
 
-	query := "SELECT idusers,name FROM users WHERE name = ?"
+	query := "SELECT users_id,name FROM users WHERE name = ?"
 
 	user := data.User{}
 
@@ -118,14 +135,16 @@ func getUser(username string) (data.User, error) {
 	return user, nil
 }
 
+// addUser adds a user with the given username and password to the database.
 func addUser(username string, password string) error {
 	db := GetConnection()
 
 	rTx := db.MustBegin()
 
-	query := "INSERT INTO `users`(`name`, `password`) VALUES (?, ?)"
+	query := "INSERT INTO `users`(`name`, `password`, `role`) VALUES (?, ?, ?)"
 
-	_, userError := db.Exec(query, username, password)
+	// 2 refers to the standard role "athlete" for every new user
+	_, userError := db.Exec(query, username, password, 2)
 	if userError != nil {
 		return userError
 	}
@@ -135,20 +154,21 @@ func addUser(username string, password string) error {
 	return nil
 }
 
+// deleteUserAndSessions deletes all sessions for a given user and after that the user itself.
 func deleteUserAndSessions(username string) error {
 	db := GetConnection()
 
 	rTx := db.MustBegin()
 
 	// Delete all sessions connected to the user
-	query := "DELETE FROM `sessions` WHERE user = (SELECT idusers FROM users WHERE name = ?)"
+	query := "DELETE FROM sessions WHERE athlete = (SELECT users_id FROM users WHERE name = ?)"
 	_, userError := db.Exec(query, username)
 	if userError != nil {
 		return userError
 	}
 
 	// Delete user from users table
-	query = "DELETE FROM `users` WHERE name = ?"
+	query = "DELETE FROM users WHERE name = ?"
 	_, userError = db.Exec(query, username)
 	if userError != nil {
 		return userError
